# SparkFun_MPU-9250-DMP_Arduino_Library

./: .gitignore
src/: CMakeLists.txt  SparkFunMPU9250-DMP.cpp  SparkFunMPU9250-DMP.h  main.cpp
src/util/: arduino_mpu9250_clk.c  arduino_mpu9250_i2c.cpp  arduino_mpu9250_i2c.h  arduino_mpu9250_log.cpp  inv_mpu.c  inv_mpu_dmp_motion_driver.c
